--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>OAMK Notes API</title>
+    <title>Team 7 AWA API</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
   </head>
 <body>
